src/objects/OV_ShelfTileReport__c.object
<CustomObject>
    <description>Junction object to link 1 or more Report Tiles with one or more Shelf Tiles.</description>
    <fields>
        <fullName>Folder__c</fullName>
        <formula>TEXT(Report__r.Report_Folder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heading__c</fullName>
        <formula>TEXT(Report__r.Report_Heading__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heading</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <description>One View Report</description>
        <inlineHelpText>One View Report</inlineHelpText>
        <label>Report</label>
        <referenceTo>OV_Report__c</referenceTo>
        <relationshipName>OV_Shelf_Tile_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shelf_Tile__c</fullName>
        <label>Shelf Tile</label>
        <referenceTo>OV_Shelf_Tile__c</referenceTo>
        <relationshipName>OV_Shelf_Tile_Reports</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>Report__r.Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provoke_workflow__c</fullName>
        <description>used to update to cause workflow to fire</description>
        <label>provoke workflow</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>One View Shelf Tile Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Report__c</columns>
        <columns>Shelf_Tile__c</columns>
        <columns>Heading__c</columns>
        <columns>Folder__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OV-ShelfTileReport-{000000}</displayFormat>
        <label>ShelfTileReport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>One View Shelf Tile Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>